Fix z-index so it does not float over topbar

--- a/web/form/style/formedit.less
+++ b/web/form/style/formedit.less
@@ -256,5 +256,5 @@ div.soresu-radio-option-edit {
   position: relative;
   right: 11px;
   height: 35px;
-  z-index: 20000;
+  z-index: 2;
 }
